--- a/bai_tap_2.html
+++ b/bai_tap_2.html
@@ -15,7 +15,7 @@
                 i--;
             }
         } if (a == false) {
-            alert("khong co phan tu trong mang")
+            alert(arr);
         } else  {
             alert("mang con lai:" + arr);
         }
